[package]
name = "quic-cm-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
log = "0.4"
mio = { version = "0.8", features = ["net", "os-poll", "os-ext"] }
nix = { version = "0.28", features = ["fs"] }
tokio = { version = "1.37", features = ["full"] }

[dev-dependencies]
ring = "0.17.8"
quiche = { version = "0.20.1", features = ["qlog"] }
mio-signals = "0.2"
